fix headline spacing iphone 5, remove middle cta

--- a/ss/custom/css/gro-224398.webflow.css
+++ b/ss/custom/css/gro-224398.webflow.css
@@ -530,6 +530,15 @@ html.w-mod-js *[data-ix="scale-in-on-scroll"] {
   }
 }
 
+@media (max-width: 320px) {
+  .tagline {
+    padding-top: 35px;
+  }
+  .tagline-sub {
+    margin-top: 10px;
+  }
+}
+
 @font-face {
   font-family: 'Proxima Nova';
   src: url('../fonts/ProximaNova-Bold.otf') format('opentype');
